// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownItem /> should render component 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
}

.c1 {
  border-radius: .2rem;
  fill: currrentcolor;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
}

.c1 .svg,
.c1 .svg .fill,
.c1 .svg .stroke {
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: fill,stroke;
  transition-property: fill,stroke;
}

<div
    class="c0 c1"
    cursor="$cursor.dropdown"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`<DropdownItem /> should render waveEffect 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  isolation: isolate;
  overflow: hidden;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c1 {
  border-radius: .2rem;
  fill: currrentcolor;
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: background,color,fill;
  transition-property: background,color,fill;
}

.c1 .svg,
.c1 .svg .fill,
.c1 .svg .stroke {
  -webkit-transition: 100ms 0s ease-in-out;
  transition: 100ms 0s ease-in-out;
  -webkit-transition-property: fill,stroke;
  transition-property: fill,stroke;
}

<div
    class="c0 c1"
    cursor="$cursor.dropdown"
    overflow="hidden"
  >
    Content
  </div>
</DocumentFragment>
`;
